# prometheus-happ

./: .gitattributes  .gitignore  BUILD.md  CONTRIBUTING.md  CONTRIBUTING.md.asc  CONTRIBUTING.md.sha256  Cargo.toml  PROMETHEUS_HAPP_STAGING_CHECKSUMS.txt  PUBLICATION_BOUNDARY.md  README.md  README.md.asc  README.md.sha256  SECURITY.md  happ.yaml  web-happ.yaml
.cargo/: config.toml
.github/workflows/: ci.yml  gateway-ci.yml  secret-scan.yml
bridge/: package-lock.json  package.json  server.mjs
dnas/hearth/: dna.yaml
docs/: RUNTIME_BOUNDARY.md
docs/benchmark-intelligence/: HOLOCHAIN_RUNTIME_DESIGN.md  PROMETHEUS_BENCHMARK_INTELLIGENCE_LAYER.md
docs/references/: CANONICAL_DOCUMENTS.md  PROMETHEUS_CANON_12_PAGES.md
docs/runtime/: GENESIS_BENCHMARK_RUNTIME_PROOF_2026_05_30.md  LOCAL_RUNTIME_AUTOMATION_PROOF_2026_06_07.md  LOCAL_RUNTIME_RUNBOOK_2026_06_07.md  MAIN_RUNTIME_PROOF_2026_05_30.md  PROMETHEUS_RUNTIME_BRIDGE_PROOF_2026_05_30.md  PROMETHEUS_RUNTIME_BRIDGE_SMOKE_TEST_2026_06_07.md
gateway/: .env.example  README.md  package-lock.json  package.json
gateway/scripts/: e2e_verify.mjs  finalize_results.mjs  run_wp4.sh  smoke.mjs  wp4_b7_verify.mjs  wp4_mqtt_verify.mjs
gateway/src/: conductor.mjs  evidence.mjs  ingest.mjs  runtime_client.mjs
integration_tests/: Cargo.toml
integration_tests/tests/: conductor.rs
release/v1.1.3-runtime-proof/: CHANGELOG.md  CLAIM_BOUNDARY.md  README.md  RELEASE_MANIFEST.md  RELEASE_NOTES.md  SIGNING_INSTRUCTIONS.md
ui/: index.html
zome_coordinator/: Cargo.toml
zome_integrity/: Cargo.toml
(+25 files in other folders)
